kubernetes/ingress-learn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-ingress
  namespace: learning
spec:
  tls:
  - hosts:
      - learn.meetlily.org
    secretName: meetlily-org-tls
  defaultBackend:
    service:
      name: learn-server-service
      port:
        number: 4000
  rules:
    - host: "learn.meetlily.org"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: learn-server-service
              port:
                number: 5000
